# Aetherix

./: .gitignore  .npmrc  Default Policy v1.01.xlsx  README.md  docker-compose.yml  fix-imports.js  fix-imports2.js  fix-imports3.js  lint_output.txt  package-lock.json  package.json
agent/: Cargo.toml  build-all.sh
agent/native-host/: com.aetherix.browser_bridge.json  deploy-native-host.sh
agent/packaging/: linux-package-and-sign.sh  macos-package-and-notarize.sh  windows-sign.ps1
agent/packaging/windows/: Product.wxs
agent/src/: bridge.rs  dlp_client.rs  evidence.rs  lib.rs  main.rs  native_bridge.rs
agent/src/cis/: mod.rs
agent/src/dlp/: genai.rs  mod.rs  semantic.rs
agent/src/edr/: ioc.rs  mod.rs  process_tree.rs  ransomware.rs  response.rs  rollback.rs.bak  yara_scan.rs
agent/src/edr/rollback/: evidence.rs  intent.rs  mod.rs  persistence.rs  provider.rs  types.rs  vss.rs
agent/src/fim/: mod.rs
agent/src/interceptors/: clipboard.rs  file_upload.rs  mod.rs  usb.rs
agent/src/inventory/: mod.rs
agent/src/policy/: mod.rs
agent/tests/: clipboard_block_integration.rs  edr_detector_integration.rs  file_upload_block_integration.rs  policy_hot_reload_integration.rs
docs/: Aetherix E2E Test Suite Prompt.md  Aetherix EASM Implementation Prompt.md  Aetherix Policy Engine Prompt.md  Aetherix Sidebar Reorganization Prompt.md  README.md  accounts.md  agent-semantic-dlp-enforcement.md  architecture.md  capability-truth-table-2026-05-31.md  companies.md  console-ui-audit-2026-05-28.md  console-wiring-remote-edr.md  coordination-brief-cycle-2026-05-27-short.md  (+27 more)
(+209 files in other folders)
